fixed spacing hopefully for the last time

--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
     color: var(--color-text-empty);
+    overflow-y: hidden;
 }
 
 .search-bar {
